--- a/src/WeatherApp.css
+++ b/src/WeatherApp.css
@@ -9,7 +9,7 @@ body {
 .weather-app {
   display: flex;
   flex-direction: column;
-  align-items: center
+  align-items: center;
   justify-content: center;
   height: 100vh;
 }
